gccida/c0/clear_reload_reg_in_use
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/reload1.c:4723:63: error: must use 'enum' tag to refer to type 'reload_type'
void  clear_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/reload1.c:4723:81: error: must use 'enum' tag to refer to type 'machine_mode'
void  clear_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                                                ^
                                                                                enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/reload1.c:4794:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/reload1.c:4795:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v23 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/reload1.c:4843:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 4328, "clear_reload_reg_in_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/reload1.c:4893:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[rld[i].mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/reload1.c:4894:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = mode_class_0[rld[i].mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/clear_reload_reg_in_use/src/obj/reload1.o] Error 1
